# sexditor

./: .ignore  Cargo.toml  README.md  test.js  test.txt
src/: args.rs  main.rs  theme.rs
src/editor/: cursor_actions.rs  mod.rs  text_actions.rs  text_colour.rs
syntax/: js.toml  rs.toml  txt.toml
theme/: catppuccin.toml  default.toml  ferra.toml  neon.toml  soft-night.toml  solarized.toml  tokyonight.toml  vibrant.toml
