[package]
name = "sexditor"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.53", features = ["derive"] }
color-eyre = "0.6.5"
crossterm = "0.29.0"
fancy-regex = "0.16.2"
ratatui = "0.29.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_with = "3.16.0"
toml = "0.9.8"
